--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -100,6 +100,23 @@
     background: none;
 }
 
+/* Button */
+.btn-label {
+    position: relative;left: -12px;
+    display: inline-block;padding: 6px 12px;
+    background: rgba(0,0,0,0.15);
+    border-radius: 3px 0 0 3px;
+}
+
+.btn-labeled {
+    padding-top: 0;
+    padding-bottom: 0;
+}
+
+.btn { 
+    margin-bottom:10px; 
+}
+
 /* @media -> use to detect the size or directions of device */
 @media(min-width:768px) {
     #wrapper {
