--- a/css/simple-sidebar.css
+++ b/css/simple-sidebar.css
@@ -35,6 +35,7 @@
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
+    text-align: center;
 }
 
 #wrapper.toggled #sidebar-wrapper {
@@ -57,8 +58,9 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
+    left: 50%;
     width: 250px;
-    margin: 0;
+    margin-left: -125px;
     padding: 0;
     list-style: none;
 }
@@ -158,7 +160,7 @@
     }
 
     #wrapper.extend {
-        padding-left: 250px;
+        padding-left: 280px;
     }
 
     #sidebar-wrapper {
@@ -166,7 +168,7 @@
     }
 
     #sidebar-wrapper.extend {
-        width: 250px;
+        width: 280px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
@@ -185,9 +187,6 @@
 
     .sidebar-nav div,li,hr{display: none;}
     .sidebar-nav li.icon {display: block;}
-    .sidebar-nav.responsive li.icon{
-        margin: auto;
-    }
     .sidebar-nav.responsive div:not(:first-child) {
         float: none;
         display: inline;
