--- a/templates/index.html
+++ b/templates/index.html
@@ -9,9 +9,10 @@
     <meta name="author" content="">
     <title>Simple Sidebar - Start Bootstrap Template</title>
     <!-- Bootstrap Core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
     <!-- Custom CSS -->
-    <link href="css/simple-sidebar.css" rel="stylesheet">
+    <link href="/static/css/simple-sidebar.css" rel="stylesheet">
+    <link href="/static/css/custom.css" rel="stylesheet">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -37,34 +38,42 @@
                     <div class="imgFrame">
                         <div class="row">
                             <a id="1" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-1" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="2" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/74fTXqv.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-2" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="3" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/T73fYI2.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-3" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="4" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/SYk7C9w.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-4" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="5" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/X3gapju.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-5" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="6" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/pv8OwMO.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-6" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
                             <a id="7" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" tabindex="0" alt=""></a>
+                            <p id="pad-7" class="number-of-editing"></p>
                         </div>
                         <hr>
                         <div class="row">
-                            <a id="7" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="about:blank" tabindex="0" alt="" id="show-picture" ></a>
+                            <a id="8" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="about:blank" tabindex="0" alt="" id="show-picture" ></a>
+                            <p id="pad-8" class="number-of-editing"></p>
                         </div>
                     </div>
                     <hr>
@@ -87,6 +96,7 @@
         <!-- /#sidebar-wrapper -->
         <!-- Page Content -->
         <div id="page-content-wrapper">
+            <div id="test"></div>
             <h3>Keyword: HCI, homepage, index</h3>
             <hr style="color:black">
             <div class="mypad"></div>
@@ -95,12 +105,23 @@
     </div>
     <!-- /#wrapper -->
     <!-- jQuery -->
-    <script src="js/jquery.js"></script>
-    <script src="js/etherpad.js"></script>
-    <script src="js/upload-photo.js"></script>
+    <script src="/static/js/jquery.js"></script>
+    <script src="/static/js/etherpad.js"></script>
+    <script src="/static/js/upload-photo.js"></script>
+
     <!-- Bootstrap Core JavaScript -->
-    <script src="js/bootstrap.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
+
     <!-- Menu Toggle Script -->
+    <script>
+    function extend() {
+        $(".sidebar-nav").toggleClass("responsive");
+        $("#sidebar-wrapper").toggleClass("extend");
+        $("#wrapper").toggleClass("extend");
+    }
+    </script>
+
+    <!-- Create pad and change pad Script -->
     <script>
     // Initially display the pad of the first slide
     $('.mypad').pad({
@@ -112,12 +133,33 @@
             'padId': id
         });
     }
+    </script>
 
-    function extend() {
-        $(".sidebar-nav").toggleClass("responsive");
-        $("#sidebar-wrapper").toggleClass("extend");
-        $("#wrapper").toggleClass("extend");
-    }
+    <!-- Update pad users count -->
+    <script type="text/javascript">
+    $(function() {
+        console.log( "ready!" );
+        getPadUsersCount();
+    });    
+
+    function getPadUsersCount() {
+        console.log( "get users count!" );
+        $.ajax({
+          type: "GET",
+          url: "/getpadusercount"
+        }).done(function( response ) {
+            console.log(response);
+            response = JSON.parse(response);    // parse JSON string
+
+            for(var padID in response){
+                if(document.getElementById("pad-" + padID)) {
+                    $("#pad-" + padID).text('Number of people editing: ' + response[padID]);
+                }                
+           }            
+        }); 
+
+        setTimeout(getPadUsersCount, 3000);
+    }       
     </script>
 </body>
 
