--- a/templates/index.html
+++ b/templates/index.html
@@ -1,233 +1,96 @@
 <!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, shrink-to-fit=no, initial-scale=1">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <title>Simple Sidebar - Start Bootstrap Template</title>
-    <!-- Bootstrap Core CSS -->
-    <link href="/static/css/bootstrap.min.css" rel="stylesheet">
-    
-    <!-- Custom CSS -->
-    <link href="/static/css/simple-sidebar.css" rel="stylesheet">
-    <link href="/static/css/myCss.css" rel="stylesheet">
-
-    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-        <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
-</head>
-
-<body>
-    <div id="wrapper">
-        <!-- Sidebar -->
-        <div id="sidebar-wrapper">
-            <div class="col-md-offset-2">
-                <ul class="sidebar-nav">
-                    <li class="sidebar-brand">
-                        <a href="#">
-                        CHI2017 CLC Tool
-                    </a>
-                    </li>
-                    <li class="icon">
-                        <a href="javascript:void(0);" onclick="extend()">&#9776;</a>
-                    </li>
-                    <div class="imgFrame">
-                        <div class="row">
-                            <div class="row-left">
-                                <a id="1" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0" alt=""></a>
-                            </div>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">
-                                <p id="padInfo-1" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="2" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/74fTXqv.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-2" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="3" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/T73fYI2.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-3" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="4" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/SYk7C9w.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-4" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="5" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/X3gapju.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-5" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="6" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/pv8OwMO.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-6" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="7" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="http://imgur.com/bVJIOj5.jpg" tabindex="0" alt=""></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-7" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                        <hr>
-                        <div class="row">
-                            <a id="8" href="javascript: return false;" onclick="changePad(this.id);"> <img class="img-responsive" src="about:blank" tabindex="0" alt="" id="show-picture" ></a>
-                            <div class="row-right">
-                                <img src="/static/img/user.png">                            
-                                <p id="padInfo-8" class="number-of-editing"></p>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                    <div class="row">
-                        <label class="take-picture">
-                            <span class="btn-label"><i class="glyphicon glyphicon-camera"></i></span> Add Slides
-                            <input type="file" class="take-picture" id="take-picture" accept="image/*">
-                        </label>
-                        <!--
-                        <button type="button" class="btn btn-labeled btn-primary">
-                            <span class="btn-label"><i class="glyphicon glyphicon-camera"></i></span>Add Slides
-                        </button>-->
-                        <button type="button" class="btn btn-labeled btn-success">
-                            <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh
-                        </button>
-                    </div>
-                </ul>
-            </div>
-        </div>
-        <!-- /#sidebar-wrapper -->
-        <!-- Page Content -->
-        <div id="page-content-wrapper">
-            <span id="showBlock">
-				<b style="font-size:20px;">Keywords:</b> 
-			</span>
-			<img class="keywordAdd" src="/static/img/add.png" id="addKeyword">
-
-            <hr style="color:black">
-            <div class="mypad"></div>
-        </div>
-        <!-- /#page-content-wrapper -->
-    </div>
-    <!-- /#wrapper -->
-    <!-- jQuery -->
-    <script src="/static/js/jquery.js"></script>
-    <script src="/static/js/etherpad.js"></script>
-    <script src="/static/js/upload-photo.js"></script>
-
-    <!-- Bootstrap Core JavaScript -->
-    <script src="/static/js/bootstrap.min.js"></script>
-
-    <!-- Menu Toggle Script -->
-    <script>
-    function extend() {
-        $(".sidebar-nav").toggleClass("responsive");
-        $("#sidebar-wrapper").toggleClass("extend");
-        $("#wrapper").toggleClass("extend");
-    }
-    </script>
-
-    <!-- Create pad and change pad Script -->
-    <script>
-    // Initially display the pad of the first slide
-    $('.mypad').pad({
-        'padId': '1'
-    }); // sets the pad id and puts the pad in the div 
-
-    function changePad(id) {
-        $('.mypad').pad({
-            'padId': id
-        });
-    }
-    </script>
-
-    <!-- Update pad users count -->
-    <script type="text/javascript">
-    $(function() {
-        console.log( "ready!" );
-        getPadUsersCount();
-    });    
-
-    function getPadUsersCount() {
-        console.log( "get users count!" );
-        $.ajax({
-          type: "GET",
-          url: "/getpadusercount"
-        }).done(function( response ) {
-            console.log(response);
-            response = JSON.parse(response);    // parse JSON string
-
-            for(var padID in response){
-                if(document.getElementById("padInfo-" + padID)) {
-                    // $("#padInfo-" + padID).text('Number of people editing: ' + response[padID]);
-                    $("#padInfo-" + padID).text(response[padID]);
-                }                
-           }            
-        }); 
-
-        setTimeout(getPadUsersCount, 3000); // call getPadUsersCount every 3 seconds
-    }       
-    </script>
-	
-	<!-- Keywords adding Script -->
-	<script>
+<html>
+	<head>
 		
-		var txtId = 1;
-		$("#addKeyword").click(function () {
-			$("#showBlock").append('<span id="kw' + txtId + '"><input type="text" class="keywordBtn" size="10" id="kw' + txtId + 'text" onchange="ok(this.value,'+txtId+')"/></span>');
+	    
+		
+		<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/themes/smoothness/jquery-ui.css" />
+		<link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+		<link rel="stylesheet" href="static/css/style.css">
+		<title>Interactive Transcript</title>
+		<meta name="description" content="Free Web tutorials">
+		<meta name="author" content="Cody Saylor">
+		    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+		<script src="static/js/etherpad.js"></script>
+
+		</head>
+	<body>
+		
+
+		
+		<div style="float: left" id="left">
+			<div id='player'></div>
+			<div id="cc" class="resizable" style="width:0px; height:0px; overflow-y: scroll; overflow-x: hidden;"></div>
+		<div id="gradient" style="width:100%; height:16px; text-align:center; background: linear-gradient(to bottom, rgba(255,255,255,0.4), #fff); position: relative; top: -20px;"></div>
+		<div id="container" style="height:500px; width: 100%; position: relative;">
+		<div id="hiddentimeholder" hidden>Hidden time holder</div>
+		<input type="text" id="whatupyo" hidden>
+		<input type="text" id="dur_holder" hidden>
+		
+		<button onClick="scrollToBottom()">Scroll to Bottom</button>
+		<div id="lines" style="height:250px; overflow-y: scroll; overflow-x: hidden;">
 			
-			
-			txtId++;
+		</div>
+		</div>
+		</div>
+		
+		<div id="right">
+			<div style="float: left" id="examplePadBasic"></div>
+		</div>
+		
+		<script type="text/javascript">
+
+        // The most basic example
+		var pad = $('#examplePadBasic').pad({'padId':'test'}); // sets the pad id and puts the pad in the div
+		
+		/*
+		var add = setInterval(function() {
+		    // allow 1px inaccuracy by adding 1
+		    var isScrolledToBottom = lines.scrollHeight - lines.clientHeight <= lines.scrollTop + 1;
+		   console.log(lines.scrollHeight - lines.clientHeight,  lines.scrollTop + 1);
+
+		    // scroll to bottom if isScrolledToBotto
+		    if(isScrolledToBottom)
+		      lines.scrollTop = lines.scrollHeight;
+		}, 300);*/
+
+		function setContent(text) {
+	        $.ajax({
+	          type: "GET",
+	          url: "/setText",
+	          data:{ a: text+'\n'}
+
+	        }).done(function( response ) {
+	        	console.log(response);
+	            response = JSON.parse(response);    // parse JSON string
+	            console.log(response);
+	            for(var padID in response){
+	                console.log('test');
+	           }            
+	        }); 
+
+	        //setTimeout(getPadUsersCount, 3000); // call getPadUsersCount every 3 seconds
+	    }
+
+	   function scrollToBottom(){
+				//lines.scrollTop = lines.scrollHeight - lines.clientHeight;
+				lines.scrollTop = lines.scrollHeight;			
+	   }
+
+		/*
+		var url = "http://0.0.0.0:9001/api/1/getText?apikey="+apikey+"&padId=test";
+			$.ajax({
+			  url: url,
+			}).done(function() {
 		});
-		//function deltxt(id) {
-			//$("#div"+id).remove();
-		//}
-	
+		*/   
+	    
+	    </script>
 
-	</script>
-	
-	<!-- Keywords editing Script -->
-	<script>
-	  
-		function edit(kwId){
-			var keyword = document.getElementById("kw"+kwId+"text").value;
-			//document.write(keyword);
-			document.getElementById("kw"+kwId).innerHTML='<input type="text" class="keywordBtn" size="8" value="'+keyword+'" id="kw'+kwId+'text" onchange="ok(this.value,'+kwId+')"/>';
-		}
-	</script>
-	
-	<!-- Keywords confirming Script -->
-	<script>
-		function ok(edit_value, kwId){
-			document.getElementById("kw"+kwId).innerHTML='<input type="button" class="keywordBtn" id="kw'+kwId+'text" value="'+edit_value+'" onclick="edit('+kwId+')"/>';
-		}
+		
 
-	</script>
-</body>
-
+		<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.10.4/jquery-ui.min.js"></script>
+		<script src="static/jQuery.tubeplayer.min.js"></script>
+		<script src="static/js/main.js"></script>
+	</body>
 </html>
