speech recognition auto-restart but only show text after pause

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -15,6 +15,7 @@
     <link href="static/css/simple-sidebar.css" rel="stylesheet">
     <link href="static/css/myCss.css" rel="stylesheet">
 
+    <script src="static/js/annyang.js"></script>
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -103,7 +104,9 @@
     <script src="static/js/etherpad.js"></script>
     <script src="static/js/slides.js"></script>
     <script src="static/js/upload-photo.js"></script>
-
+    
+    
+    <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> -->
     <!-- Bootstrap Core JavaScript -->
     <script src="static/js/bootstrap.min.js"></script>
 
