display text under pad

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -83,6 +83,10 @@
             <div style="float: left" id="PadContent">
                 <div id="mypad"></div>
             </div>
+
+            <button type="button" onclick="start()"> Start </button>
+            <button type="button" onclick="restart()"> Restart </button>
+            <div id="lines" style="height:200px; overflow-y: scroll; overflow-x: hidden;">
         </div>
         <!-- /#page-content-wrapper -->
     </div>
@@ -104,8 +108,8 @@
     <script src="static/js/etherpad.js"></script>
     <script src="static/js/slides.js"></script>
     <script src="static/js/upload-photo.js"></script>
-    
-    
+
+
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> -->
     <!-- Bootstrap Core JavaScript -->
     <script src="static/js/bootstrap.min.js"></script>
