--- a/templates/slides.html
+++ b/templates/slides.html
@@ -108,6 +108,7 @@
     <script src="static/js/jquery.js"></script>
     <script src="static/js/etherpad.js"></script>
     <script src="static/js/slides.js"></script>
+    <script src="static/js/megapix-image.js"></script>
     <script src="static/js/upload-photo.js"></script>
 
 
