--- a/templates/worker.html
+++ b/templates/worker.html
@@ -67,6 +67,13 @@
                                     <input accept="image/*" class="take-picture" id="take-picture" type="file">
                                     </input>
                                 </label>
+                                <!--
+                        <button type="button" class="btn btn-labeled btn-primary">
+                            <span class="btn-label"><i class="glyphicon glyphicon-camera"></i></span>Add Slides
+                        </button>
+                        <button type="button" class="btn btn-labeled btn-success">
+                            <span class="btn-label"><i class="glyphicon glyphicon-refresh"></i></span>Refresh
+                        </button>-->
                             </div>
                         </hr>
                     </ul>
@@ -82,12 +89,27 @@
                 </span>
                 <img class="keywordAdd" id="addKeyword" src="static/img/add.png">
                     <hr style="color:black">
+                        <!--<iframe width="800" height="600" src="https://docs.google.com/document/d/1MJVag5wPXXHPkvDIK9ILAaZXxuFY61fhp5nH2c7Calk/edit?usp=sharing"></iframe>-->
                         <div id="PadContent" style="float: left">
                             <div id="mypad">
                             </div>
-                            <div class="speechTemplate">
+                            <button onclick="start()" type="button">
+                                Start
+                            </button>
+                            <!-- <button type="button" onclick="restart()"> Restart </button> -->
+                            <button id="stop" type="button">
+                                Stop
+                            </button>
+                            <div id="lines" style="height:150px; overflow-y: scroll; overflow-x: hidden;">
                             </div>
-                            <div id="lines" style="height:200px; overflow-y: scroll; overflow-x: hidden;">
+                            <div style="height:50px; border: 3px #aaaaee solid; overflow-y: scroll; overflow-x: hidden; position: relative;">
+                                <textarea id="editLines" style="border: none; width: 100%">
+                                </textarea>
+                                <div contenteditable="false" style="position:absolute;right:0; bottom: 0">
+                                    <button onclick="addSpeechToFirebase()" type="button">
+                                        OK
+                                    </button>
+                                </div>
                             </div>
                         </div>
                     </hr>
@@ -114,9 +136,15 @@
         </script>
         <script src="static/js/etherpad.js">
         </script>
-        <script src="static/js/slides.js">
+        <!-- <script src="static/js/worker.js"></script> -->
+        <script src="static/js/worker_IBM.js">
         </script>
         <script src="static/js/upload-photo.js">
+        </script>
+        <script src="https://watson-speech.mybluemix.net/bower_components/watson-speech/dist/watson-speech.js">
+        </script>
+        <!-- window.fetch pollyfill for IE/Edge & Older Chrome/FireFox -->
+        <script src="https://watson-speech.mybluemix.net/bower_components/fetch/fetch.js">
         </script>
         <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/annyang/2.6.0/annyang.min.js"></script> -->
         <!-- Bootstrap Core JavaScript -->
