--- a/templates/worker.html
+++ b/templates/worker.html
@@ -71,9 +71,9 @@
                                 </div>
                                 <div class="row-right">
                                     <img src="static/img/user.png">
-                                        <p class="number-of-editing" id="padInfo-1">
-                                        </p>
                                     </img>
+                                    <p class="number-of-editing"> 0
+                                    </p>
                                 </div>
                             </div>
                             <hr>
