update pad user count with websocket

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -26,6 +26,7 @@
         <!-- Bootstrap Core JavaScript -->
         <script src="static/js/bootstrap.min.js">
         </script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]>
