--- a/templates/worker.html
+++ b/templates/worker.html
@@ -41,6 +41,7 @@
         </script>
         <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js">
         </script>
+        <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.3.5/socket.io.min.js"></script>
         <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
         <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
         <!--[if lt IE 9]
