--- a/templates/slides.html
+++ b/templates/slides.html
@@ -62,6 +62,7 @@
                                     </img>
                                      <p class="number-of-editing"> 0
                                     </p>
+                                    <p class="keyword">Keywords: </p>
                                 </div>
                             </div>
                             <hr>
