--- a/templates/worker.html
+++ b/templates/worker.html
@@ -75,6 +75,7 @@
                                     </img>
                                     <p class="number-of-editing"> 0
                                     </p>
+                                    <p class="keyword">Keywords: </p>
                                 </div>
                             </div>
                             <hr>
