fix bug of showing the first sample slide

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -54,22 +54,22 @@
                             <div class="row">
                                 <div class="row-left">
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
-                                        <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0"/>
+                                        <img alt="" class="img-responsive" style="display: none" src="http://imgur.com/UBOTllp.jpg" tabindex="0"/>
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img src="static/img/user.png">
+                                    <img src="static/img/user.png" style="display: none">
                                     </img>
-                                     <p class="number-of-editing"> 0
+                                     <p class="number-of-editing" style="display: none"> 0
                                     </p>
-                                    <p class="keyword">Keywords: </p>
+                                    <p class="keyword" style="display: none">Keywords: </p>
                                 </div>
                             </div>
                             <hr>
                             </hr>
                         </div>
                         <hr>
-                            <div class="row">
+                            <!-- <div class="row">
                                 <label class="take-picture">
                                     <span class="btn-label">
                                         <i class="glyphicon glyphicon-camera">
@@ -79,7 +79,7 @@
                                     <input accept="image/*" class="take-picture" id="take-picture" type="file">
                                     </input>
                                 </label>
-                            </div>
+                            </div> -->
                         </hr>
                     </ul>
                 </div>
