--- a/templates/worker.html
+++ b/templates/worker.html
@@ -67,15 +67,15 @@
                             <div class="row">
                                 <div class="row-left">
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
-                                        <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" tabindex="0"/>
+                                        <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img src="static/img/user.png">
+                                    <img src="static/img/user.png" style="display: none">
                                     </img>
-                                    <p class="number-of-editing"> 0
+                                    <p class="number-of-editing" style="display: none"> 0
                                     </p>
-                                    <p class="keyword">Keywords: </p>
+                                    <p class="keyword" style="display: none">Keywords: </p>
                                 </div>
                             </div>
                             <hr>
