--- a/templates/worker.html
+++ b/templates/worker.html
@@ -66,12 +66,13 @@
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
+                                    <p class="id-of-slide"> 1 </p>
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
                                         <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img src="static/img/user.png" style="display: none">
+                                    <img src="static/img/user.png" style="display: none" class="user-img">
                                     </img>
                                     <p class="number-of-editing" style="display: none"> 0
                                     </p>
