fix bug of showing slide's id

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -53,7 +53,7 @@
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
-                                    <p class="id-of-slide"> 1 </p>
+                                    <p class="id-of-slide" style="display: none"> 1 </p>
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
                                         <img alt="" class="img-responsive" style="display: none" src="http://imgur.com/UBOTllp.jpg" tabindex="0"/>
                                     </a>
