--- a/templates/worker.html
+++ b/templates/worker.html
@@ -66,7 +66,7 @@
                         <div class="slideTemplate">
                             <div class="row">
                                 <div class="row-left">
-                                    <p class="id-of-slide"> 1 </p>
+                                    <p class="id-of-slide" style="display: none"> 1 </p>
                                     <a href="javascript: return false;" id="1" onclick="changePad(this.id);">
                                         <img alt="" class="img-responsive" src="http://imgur.com/UBOTllp.jpg" style="display: none" tabindex="0"/>
                                     </a>
