change the order of js file

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -26,8 +26,6 @@
         </script>
         <!-- <script src="static/js/worker.js"></script> -->
         
-        <script src="static/js/upload-photo.js">
-        </script>
         <script src="https://watson-speech.mybluemix.net/bower_components/watson-speech/dist/watson-speech.js">
         </script>
         <!-- window.fetch pollyfill for IE/Edge & Older Chrome/FireFox -->
@@ -172,6 +170,10 @@
           firebase.initializeApp(config);
         </script>
         <script src="static/js/worker_IBM.js">
+        </script>
+        <script src="static/js/upload-photo.js">
+        </script>
+        <script src="static/js/megapix-image.js">
         </script>
         <!-- Update pad users count -->
         <script type="text/javascript">
