--- a/templates/worker.html
+++ b/templates/worker.html
@@ -171,10 +171,10 @@
         </script>
         <script src="static/js/worker_IBM.js">
         </script>
+        <script src="static/js/megapix-image.js"></script>
         <script src="static/js/upload-photo.js">
         </script>
-        <script src="static/js/megapix-image.js">
-        </script>
+        
         <!-- Update pad users count -->
         <script type="text/javascript">
             $(function() {
