--- a/templates/slides.html
+++ b/templates/slides.html
@@ -128,9 +128,8 @@
         </script>
         <script src="static/js/slides.js">
         </script>
+        <script src="js/load-image.all.min.js"></script>
         <script src="static/js/megapix-image.js">
-        </script>        
-        <script src="static/js/upload-photo.js">
-        </script>        
+        </script>
     </body>
 </html>
