--- a/templates/worker.html
+++ b/templates/worker.html
@@ -172,8 +172,7 @@
         <script src="static/js/worker_IBM.js">
         </script>
 
-        <script src="static/js/megapix-image.js">
-        </script>        
+        <script src="static/js/load-image.all.min.js"></script>        
         <script src="static/js/upload-photo.js">
         </script>
 
