--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
 		<title>Interactive Transcript</title>
 		<meta name="description" content="Free Web tutorials">
 		<meta name="author" content="Cody Saylor">
-		    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+		    <script src="https://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
 		<script src="static/js/etherpad.js"></script>
 
 		</head>
