--- a/templates/slides.html
+++ b/templates/slides.html
@@ -60,7 +60,7 @@
                                 <div class="row-right">
                                     <img class="user-img" src="static/img/user.png" style="display: none">
                                     </img>
-                                    <p class="number-of-editing" style="display: none">
+                                    <p class="number-of-looking" style="display: none">
                                         0
                                     </p>
                                     <p class="keyword" style="display: none">
