finish user pad count

--- a/templates/worker.html
+++ b/templates/worker.html
@@ -166,7 +166,7 @@
         </script>
         <script src="static/js/worker_IBM.js">
         </script>
-        <script src="static/js/megapix-image.js">
+        <script src="static/js/load-image.all.min.js">
         </script>
         <script src="static/js/upload-photo.js">
         </script>
