add 'speech recognition' title

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -91,7 +91,8 @@
                             </div>
                             <div class="speechTemplate">
                             </div>
-                            <div id="lines" style="height:200px; overflow-y: scroll; overflow-x: hidden;">
+                            <b style="font-size:20px;">Speech Recognition:</b>
+                            <div id="lines">
                             </div>
                         </div>
                     </hr>
