--- a/static/css/myCss.css
+++ b/static/css/myCss.css
@@ -1,42 +1,48 @@
-
 .keywordBtn {
-	-moz-box-shadow:inset 0px 0px 0px 0px #ffffff;
-	-webkit-box-shadow:inset 0px 0px 0px 0px #ffffff;
-	box-shadow:inset 0px 0px 0px 0px #ffffff;
-	background-color:transparent;
-	-moz-border-radius:6px;
-	-webkit-border-radius:6px;
-	border-radius:6px;
-	border:1px solid #dcdcdc;
-	display:inline-block;
-	cursor:pointer;
-	color:#666666;
-	font-family:Arial;
-	font-size:20px;
-	padding:4px 10px;
-	text-decoration:none;
-	text-shadow:0px 1px 0px #ffffff;
+    -moz-box-shadow: inset 0px 0px 0px 0px #ffffff;
+    -webkit-box-shadow: inset 0px 0px 0px 0px #ffffff;
+    box-shadow: inset 0px 0px 0px 0px #ffffff;
+    background-color: transparent;
+    -moz-border-radius: 6px;
+    -webkit-border-radius: 6px;
+    border-radius: 6px;
+    border: 1px solid #dcdcdc;
+    display: inline-block;
+    cursor: pointer;
+    color: #666666;
+    font-family: Arial;
+    font-size: 20px;
+    padding: 4px 10px;
+    text-decoration: none;
+    text-shadow: 0px 1px 0px #ffffff;
 }
+
 .keywordAdd {
-	cursor:pointer;
+    cursor: pointer;
 }
 
 .number-of-looking {
-	color: #fff;
+    color: #fff;
 }
 
-.slideTemplate{
-	display: none;
+.slideTemplate {
+    display: none;
 }
 
 .speechTemplate {
-	display: none;
+    display: none;
 }
 
 .keyword {
-	color: #fff;
+    color: #fff;
 }
 
 .id-of-slide {
-	color: #fff;
+    color: #fff;
+}
+
+#lines {
+    height: 200px;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
