pad_content width = 100%

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -86,7 +86,7 @@
                 </span>
                 <img class="keywordAdd" id="addKeyword" src="static/img/add.png">
                     <hr style="color:black">
-                        <div id="PadContent" style="float: left">
+                        <div id="PadContent" style="float: left; width: 100%">
                             <div id="mypad">
                             </div>
                             <div class="speechTemplate">
