--- a/templates/worker.html
+++ b/templates/worker.html
@@ -110,7 +110,7 @@
                 <img class="keywordAdd" id="addKeyword" src="static/img/add.png">
                     <hr style="color:black">
                         <!--<iframe width="800" height="600" src="https://docs.google.com/document/d/1MJVag5wPXXHPkvDIK9ILAaZXxuFY61fhp5nH2c7Calk/edit?usp=sharing"></iframe>-->
-                        <div id="PadContent" style="float: left">
+                        <div id="PadContent" style="float: left; width: 100%">
                             <div id="mypad">
                             </div>
                             <button onclick="start()" type="button">
