change user count image

--- a/templates/slides.html
+++ b/templates/slides.html
@@ -39,7 +39,8 @@
                     <ul class="sidebar-nav">
                         <li class="sidebar-brand">
                             <a href="#">
-                                Logo
+                                <!-- <img id="logo" src="static/img/logo.png" style="width: 12">
+                                </img> -->
                             </a>
                         </li>
                         <li class="icon">
@@ -59,7 +60,7 @@
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img class="user-img" src="static/img/user.png" style="display: none">
+                                    <img class="user-img" src="static/img/users.png" style="display: none">
                                     </img>
                                     <p class="number-of-looking" style="display: none">
                                         0
