--- a/templates/worker.html
+++ b/templates/worker.html
@@ -71,7 +71,7 @@
                                     </a>
                                 </div>
                                 <div class="row-right">
-                                    <img class="user-img" src="static/img/user.png" style="display: none">
+                                    <img class="user-img" src="static/img/users.png" style="display: none">
                                     </img>
                                     <p class="number-of-looking" style="display: none">
                                         0
